split card manager api and impl and make card templates bigger